--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- ===== HEAD STARTS ===== -->
 <head>
   <meta charset="UTF-8">
   <title>Simple Click Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- AdSense code goes here AFTER approval -->
+  <!-- 🔴 PASTE THIS SCRIPT AFTER ADSENSE APPROVAL -->
+  <!--
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXX"
+      crossorigin="anonymous"></script>
+  -->
 
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 30px;
       background: #f4f4f4;
+      text-align: center;
+      padding: 40px;
     }
+
     header {
       margin-bottom: 30px;
     }
+
     .game-box {
       background: white;
-      padding: 40px;
-      border-radius: 10px;
+      padding: 30px;
       max-width: 400px;
       margin: auto;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
+
     button {
       padding: 15px 30px;
       font-size: 18px;
       cursor: pointer;
       margin-top: 20px;
     }
+
     footer {
       margin-top: 40px;
       font-size: 14px;
     }
+
     footer a {
       margin: 0 10px;
       text-decoration: none;
@@ -42,24 +53,58 @@
     }
   </style>
 </head>
+<!-- ===== HEAD ENDS ===== -->
+
 <body>
 
-<header>
-  <h1>🎮 Simple Click Game</h1>
-  <p>Click the button and increase your score!</p>
-</header>
+  <header>
+    <h1>🎮 Simple Click Game</h1>
+    <p>Click the button to increase your score!</p>
+  </header>
 
-<div class="game-box">
-  <h2>Score: <span id="score">0</span></h2>
-  <button onclick="increaseScore()">CLICK ME</button>
-</div>
+  <div class="game-box">
+    <h2>Score: <span id="score">0</span></h2>
+    <button onclick="increaseScore()">CLICK ME</button>
+  </div>
 
-<footer>
-  <a href="about.html">About</a>
-  <a href="privacy.html">Privacy Policy</a>
-</footer>
+  <!-- 🔴 PLACE FOR ADS (AFTER ADSENSE APPROVAL) -->
+  <!--
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-XXXXXXXX"
+       data-ad-slot="YYYYYYYY"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  -->
 
-<script src="game.js"></script>
+  <footer>
+    <a href="#about">About</a> |
+    <a href="#privacy">Privacy Policy</a>
+    <p>© 2026 Simple Click Game</p>
+  </footer>
+
+  <!-- ===== GAME SCRIPT ===== -->
+  <script>
+    let score = 0;
+    function increaseScore() {
+      score++;
+      document.getElementById("score").textContent = score;
+    }
+  </script>
+
+  <!-- ===== ABOUT & PRIVACY SECTIONS ===== -->
+  <section id="about" style="margin-top:50px;">
+    <h2>About This Website</h2>
+    <p>This is a simple click game created for fun and learning purposes.</p>
+  </section>
+
+  <section id="privacy" style="margin-top:50px;">
+    <h2>Privacy Policy</h2>
+    <p>This website uses Google AdSense to display advertisements. Google may use cookies to show ads based on your visits. Users may opt out of personalized advertising by visiting Google Ad Settings.</p>
+  </section>
 
 </body>
 </html>
