--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <title>Simple Click Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- 🔴 PASTE THIS SCRIPT AFTER ADSENSE APPROVAL -->
-  <!--
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXX"
-      crossorigin="anonymous"></script>
-  -->
-
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6649083955354692"
+     crossorigin="anonymous"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -67,24 +63,16 @@
     <button onclick="increaseScore()">CLICK ME</button>
   </div>
 
-  <!-- 🔴 PLACE FOR ADS (AFTER ADSENSE APPROVAL) -->
-  <!--
   <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-XXXXXXXX"
-       data-ad-slot="YYYYYYYY"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-  -->
+     style="display:block"
+     data-ad-client="ca-pub-YOUR_ID"
+     data-ad-slot="AD_SLOT_ID"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
-  <footer>
-    <a href="#about">About</a> |
-    <a href="#privacy">Privacy Policy</a>
-    <p>© 2026 Simple Click Game</p>
-  </footer>
 
   <!-- ===== GAME SCRIPT ===== -->
   <script>
@@ -94,7 +82,7 @@
       document.getElementById("score").textContent = score;
     }
   </script>
-
+x
   <!-- ===== ABOUT & PRIVACY SECTIONS ===== -->
   <section id="about" style="margin-top:50px;">
     <h2>About This Website</h2>
